--- a/style.css
+++ b/style.css
@@ -154,7 +154,9 @@ header .header1 .laptop1 {
 }
 
 .contain {
-    height: 5000px;
+    height: 5200px;
+    border: 1px solid #f5f5f5;
+    border-bottom: 1px solid #cbcbcb;
 }
 
 
@@ -247,7 +249,6 @@ header .header1 .laptop1 {
 /* MAIN 1 KONTEN 1 */
 
 .konten .mainheader .main1 {
-    border: #666;
     padding-bottom: 20px;
     border-bottom: 1px solid #c7c5c5;
 }
@@ -300,7 +301,7 @@ header .header1 .laptop1 {
 /* MAIN 2 */
 
 .main2 {
-    border: 1px solid white;
+    border: 1px solid #f5f5f5;
     border-bottom: 1px solid #cbcbcb;
     padding-bottom: 30px;
 }
@@ -549,7 +550,7 @@ header .header1 .laptop1 {
 /* MAIN 3 */
 
 .main3 {
-    border: 1px solid white;
+    border: 1px solid #f5f5f5;
     border-bottom: 1px solid #cbcbcb;
     padding-bottom: 30px;
 }
@@ -571,7 +572,7 @@ header .header1 .laptop1 {
     font-size: 17px;
     border: 1px solid royalblue;
     padding: 5px;
-    width: 215px;
+    width: 150px;
     border-radius: 5px;
 }
 
@@ -798,7 +799,7 @@ header .header1 .laptop1 {
 /* MAIN 4 */
 
 .main4 {
-    border: 1px solid white;
+    border: 1px solid #f5f5f5;
     border-bottom: 1px solid #cbcbcb;
     padding-bottom: 30px;
 }
@@ -820,7 +821,7 @@ header .header1 .laptop1 {
     font-size: 17px;
     border: 1px solid royalblue;
     padding: 5px;
-    width: 215px;
+    width: 150px;
     border-radius: 5px;
 }
 
@@ -973,4 +974,109 @@ header .header1 .laptop1 {
 .main4 .konten3 div div p {
     color: #575757;
     line-height: 20px;
+}
+
+
+/* MAIN 5 */
+
+.main5 {
+    padding-bottom: 0px;
+}
+
+
+/* MAIN 5 LINK */
+
+.main5 .link {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+    text-align: center;
+}
+
+.main5 .link a {
+    color: royalblue;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 17px;
+    border: 1px solid royalblue;
+    padding: 5px;
+    width: 175px;
+    border-radius: 5px;
+}
+
+
+/* FOOTER */
+
+footer {
+    width: 100%;
+    background-color: #f5f5f5;
+}
+
+.footer {
+    width: 100%;
+    max-width: 1236px;
+    margin: 0 auto;
+    padding-top: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer ul li {
+    list-style-type: none;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: rgb(24, 24, 24);
+    font-size: 14px;
+    font-weight: 600;
+    margin-top: 10px;
+}
+
+.footer ul li a {
+    text-decoration: none;
+    color: #4d4d4d;
+    font-size: 14px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.footer ul li a:hover {
+    text-decoration: underline;
+}
+
+.list2,
+.list3 {
+    padding-top: 29px;
+}
+
+.copyright {
+    width: 100%;
+    height: 84px;
+    font-size: 13px;
+    color: rgb(102, 102, 102);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.copyright-wrap {
+    width: 100%;
+    max-width: 1236px;
+    height: 84px;
+    margin: 0 auto;
+    display: flex;
+}
+
+.left {
+    width: 100%;
+    max-width: 588px;
+    height: 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.copyright-wrap a {
+    display: inline-block;
+    color: #4d4d4d;
+    text-decoration: none;
+}
+
+.copyright-wrap a:hover {
+    text-decoration: underline;
 }
